[package]
name = "solana-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-tpu-client = "1.18"
anyhow = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
bs58 = "0.5"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
